test/check/chan_no_write_errors.expected
File "chan_no_write.mim", line 3, characters 8-12
3 | channel chan : int
            ^^^^
Error: Channel chan is never written to